# sparse-binary-matrix

./: Cargo.toml  README.md
examples/: solve.rs
src/: binary_number.rs  concat.rs  error.rs  gauss_jordan.rs  lib.rs  rows.rs  transpose.rs
src/matrix/: bitwise_operations.rs  concat.rs  constructor_utils.rs  gauss_jordan.rs  inplace_operations.rs  kronecker.rs  mod.rs  non_trivial_elements.rs  nullspace.rs  rows.rs  ser_de.rs  transpose.rs
src/vector/: bitwise_operations.rs  mod.rs
