[package]
name = "sparse-bin-mat"
version = "0.4.3"
authors = ["maxtremblay <maxtremblay>"]
edition = "2018"
description = "A sparse implementation of a binary matrix optimized for row operations"
repository = "https://github.com/maxtremblay/sparse-binary-matrix"
license = "MIT OR Apache-2.0"
keywords = ["sparse", "binary", "matrix"]
categories = ["data-structures", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_sorted = "0.1.1"
itertools = "0.9.0"
