[package]
name = "sparse-bin-mat"
version = "0.5.0"
authors = ["maxtremblay <maxtremblay>"]
edition = "2018"
description = "A sparse implementation of a binary matrix optimized for row operations"
repository = "https://github.com/maxtremblay/sparse-binary-matrix"
license = "MIT OR Apache-2.0"
keywords = ["sparse", "binary", "matrix"]
categories = ["data-structures", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_sorted = "0.1.1"
itertools = "0.9.0"
serde = {version="1.0.123", features=["derive"]}
serde_json = "1.0.62"

[dev-dependencies]
serde_test = "1.0.123"
